fix: form gap between inputs on tablet and less screens, move subtitle to center

--- a/frontend/src/components/Input/Input.css
+++ b/frontend/src/components/Input/Input.css
@@ -70,7 +70,7 @@
 
     .inputs {
         flex-direction: column;
-        height: 200px;
+        height: auto;
     }
 
     .inputs input:nth-of-type(1) {
