--- a/frontend/src/components/Main/Main.css
+++ b/frontend/src/components/Main/Main.css
@@ -34,6 +34,8 @@
 }
 
 .variables__subtitle {
+    margin: 0 auto;
+    margin-top: 40px;
     max-width: 70vw;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
